--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -3,3 +3,16 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.tile-set {
+  margin-top: 4%;
+  display: block;
+  width: 300px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.ocean-tile {
+  width: 30px;
+  height: 30px;
+}
